package SpringMvcHandler.controller;

public class AnnotationController implements Controller {
    public void doAnnotationHandler() {
        System.out.println("annotation......");
    }
}
