package SpringMvcHandler.controller;

/**
 * @author 短途游
 */
public interface  Controller {

}
