package SpringMvcHandler.controller;

/**
 * @author TanYuan
 * @date 2022年04月27日 21:21
 */
public class HttpController implements Controller{
    public void doHttpHandler() {
        System.out.println("http......");
    }
}

